# cuda-training-series

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
exercises/hw1/: CMakeLists.txt  hello.cu  hello_solution.cu  matrix_mul.cu  matrix_mul_solution.cu  notes.md  vector_add.cu  vector_add_solution.cu
exercises/hw10/: CMakeLists.txt  notes.md  readme.md  streams.cu
exercises/hw11/: CMakeLists.txt  notes.md  test.cu
exercises/hw12/: CMakeLists.txt  notes.md  readme.md  task1.cu  task1_solution.cu  task2.cu  task2_solution.cu
exercises/hw13/: CMakeLists.txt  README.md  axpy_cublas_from_scratch.cu  axpy_cublas_with_fixme.cu  axpy_stream_capture_from_scratch.cu  axpy_stream_capture_timer.cu  axpy_stream_capture_with_fixme.cu  notes.md
exercises/hw13/Solutions/: axpy_cublas_solution.cu  axpy_stream_capture_solution.cu
exercises/hw2/: CMakeLists.txt  matrix_mul_shared.cu  matrix_mul_shared_solution.cu  notes.md  stencil_1d.cu  stencil_1d_solution.cu
exercises/hw3/: CMakeLists.txt  notes.md  readme.md  vector_add.cu  vector_add_grid_stride_loop.cu  vector_add_grid_stride_loop_solution.cu
exercises/hw4/: CMakeLists.txt  matrix_sums.cu  matrix_sums_solution.cu  notes.md  readme.md
exercises/hw5/: CMakeLists.txt  matrix_sums.cu  matrix_sums_reduction.cu  matrix_sums_solution.cu  max_reduction.cu  max_reduction_solution.cu  notes.md  reductions.cu
exercises/hw6/: CMakeLists.txt  array_inc.cu  array_inc_solution.cu  linked_list.cu  linked_list_solution.cu  notes.md  readme.md
exercises/hw7/: CMakeLists.txt  multi.cu  notes.md  overlap.cu  readme.md
exercises/hw8/: CMakeLists.txt  notes.md  readme.md
exercises/hw8/task1/: task1.cu  task1_solution.cu
exercises/hw8/task2/: task2.cu
exercises/hw8/task3/: task3.cu  task3_solution.cu
exercises/hw9/: CMakeLists.txt  notes.md  readme.md  task1.cu  task1_solution.cu  task2.cu  task2_solution.cu
